[UPDATE] Form revamped

--- a/Views/EmailTemplates/Template.ejs
+++ b/Views/EmailTemplates/Template.ejs
@@ -7,6 +7,7 @@
     <h2>New Customer Contact Request</h2>
     <p><strong>Name:</strong> <%= data.name %></p>
     <p><strong>Email:</strong> <%= data.email %></p>
+    <p><strong>Service Type:</strong> <%= data.type %></p>
     <p><strong>Phone Number:</strong> <%= data.phone %></p>
     <p><strong>Message:</strong> <%= data.message %></p>
   </body>
